Parenting a Lattice to an Armature using Automatic Weights doesn't work #60791

Closed
opened 2019-01-23 12:01:26 +01:00 by William Reynish · 9 comments

System Information
Operating system: macOS 10.14
Graphics card: AMD Radeon R9 M395X 4096 MB

Blender Version
Broken: Blender 2.80 beta 2019-01-23

Short description of error
When parenting a lattice object to an armature using the Automatic Weights feature, no weights are assigned - it doesn't work.

Exact steps for others to reproduce the error

Lattice_Automatic_Weights_bug.blend

  • Open the blend file here.
  • Select the Lattice, then the Armature.
  • Press Ctrl-P and select Automatic Weights.
  • Move the bones around and you'll see the lattice doesn't move

You can also enter edit mode and see that all the weights are set to 0. The deformation does work if you manually add weights, but the Automatic Weights feature fails here.

**System Information** Operating system: macOS 10.14 Graphics card: AMD Radeon R9 M395X 4096 MB **Blender Version** Broken: Blender 2.80 beta 2019-01-23 **Short description of error** When parenting a lattice object to an armature using the Automatic Weights feature, no weights are assigned - it doesn't work. **Exact steps for others to reproduce the error** [Lattice_Automatic_Weights_bug.blend](https://archive.blender.org/developer/F6378027/Lattice_Automatic_Weights_bug.blend) - Open the blend file here. - Select the Lattice, then the Armature. - Press Ctrl-P and select Automatic Weights. - Move the bones around and you'll see the lattice doesn't move You can also enter edit mode and see that all the weights are set to 0. The deformation does work if you manually add weights, but the Automatic Weights feature fails here.

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

To be fair, this also didn't work in 2.79. It could be a missing feature, but in that case we should not display the Automatic Weights feature as an option for lattices.

The nicest thing of course would be if we could support this and make it work.

Lattices are used a lot for rigging - especially with GP objects where you can't practically weight each keyframe, Lattices are a better way to deform them using lattices as an intermediary between the GP object and bones.

To be fair, this also didn't work in 2.79. It could be a missing feature, but in that case we should not display the Automatic Weights feature as an option for lattices. The nicest thing of course would be if we could support this and make it work. Lattices are used a lot for rigging - especially with GP objects where you can't practically weight each keyframe, Lattices are a better way to deform them using lattices as an intermediary between the GP object and bones.
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Yeah, I'm checking the code right now and was wondering why this case is completely missing haha
Not sure how hard it is to compute automatic weights, checking that right now.

Yeah, I'm checking the code right now and was wondering why this case is completely missing haha Not sure how hard it is to compute automatic weights, checking that right now.
Member

Setting to "needs triage" again because I'm not sure if we consider this a bug.
It's certainly possible to implement this feature though.

At least the UI should be changed maybe so that only options that actually do something are visible.

Setting to "needs triage" again because I'm not sure if we consider this a bug. It's certainly possible to implement this feature though. At least the UI should be changed maybe so that only options that actually do something are visible.

Added subscriber: @brecht

Added subscriber: @brecht

It only works for meshes, simplest would be to just hide the option if there are no mesh objects selected.

It only works for meshes, simplest would be to just hide the option if there are no mesh objects selected.
Jacques Lucke self-assigned this 2019-01-23 13:29:17 +01:00

This issue was referenced by ac5278b682

This issue was referenced by ac5278b682cfb090aafe93082e95349cb7d993d3
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60791
No description provided.